--- a/math154/calculus2_integral_examples.html
+++ b/math154/calculus2_integral_examples.html
@@ -33,8 +33,8 @@ $(function () {
     <ol type='A'>
       <li> Find the area between the curves \(y = x^2 + x\) and \(x = y^{1/3}\). There is a sage plotting script below if needed.
       <li> Find the area between the curves \(y = 5\) and \(y = x + 4/x\).
-      <li> Find the area between the curves \(x = y^3 + 2y^2 + 1\) and \(x = -y^2 +1\).
-      <li> Find the area between the curves \(y = \cos^{-1}x\), \(y = \sin^{-1} x\), and \(x = \pm 1\).
+      <li> Find the area between the curves \(x = y^3 + 2y^2 + 1\) and \(x = -y^2 +1\). (hint: use the sage tool to graph first)
+      <li> Find the area between the curves \(y = \cos^{-1}x\), \(y = \sin^{-1} x\), and \(x = \pm 1\). (see video solution on Canvas)
     </ol>
 
   </div>
