--- a/math250/week3.html
+++ b/math250/week3.html
@@ -390,7 +390,6 @@ EM
 <li> Write a paragraph or two in your notebook that explains the relationship between the Improved Euler and Runge-Kutta Methods for IVPs and the trapezoidal rule and Simpson's rule for numerical integration.
 </ol>
 
-  <!--
 <h3>RK code from class 9-23-2020</h3>
 <div class="compute"><script type="text/x-sage">
 # everything following hash symbol is comment
@@ -435,7 +434,7 @@ Prk2 = line(RK)
 RK
 
 </script></div>
--->
+
 </div>
 
 <h2>Example 5 - Warning Example </h2>
@@ -499,6 +498,16 @@ $$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
   </ol>
 </div>
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
+<h2>Example 10 </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example</button>
+  <div id="ex10" class="collapse">
+
+<P>The acceleration of a particular sports car is proportional to the difference between 280 ​km/h and the velocity of this sports car.
+If this machine can accelerate from rest to 105 ​km/h in 8 ​s, how long will it take for the car to accelerate from rest to 210 ​km/h?
+<br>
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_3blwo22m&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_7oqgfiof" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+</div>
+
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
