--- a/math250/week3.html
+++ b/math250/week3.html
@@ -430,7 +430,7 @@ Prk1 = list_plot(RK) #blue is default color
 Prk2 = line(RK)
 (Prk1+Prk2).show()
 
-#display pts for euler method
+#display pts for RK method
 RK
 
 </script></div>
@@ -506,6 +506,13 @@ $$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
 If this machine can accelerate from rest to 105 ​km/h in 8 ​s, how long will it take for the car to accelerate from rest to 210 ​km/h?
 <br>
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_3blwo22m&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_7oqgfiof" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+</div>
+
+<h2>Example </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example</button>
+  <div id="ex11" class="collapse">
+
+<P>Find the equilibrium solutions and sketch a phase diagram of \( \displaystyle \frac{dx}{dt} = x^3 - 6x^2 + 8x\)
 </div>
 
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
