--- a/math154/calculus2_integral_patterns.html
+++ b/math154/calculus2_integral_patterns.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 600px; padding-left: 1cm" background="bg.jpg">
+  <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
   <h1>Integral patterns</h1>
 
@@ -107,5 +107,7 @@ def _(f = input_box(f, label=' f(x) = ', width='20')):
     <li>Check your answer via integration techniques and trigonometric identities.
     </ol>
   </ol>
+
+  <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
