--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -34,6 +34,7 @@ $(function () {
   <li><a href="./exp_log.html">exp_log.html</a>
   <li><a href="./newtonsmethod.html">newtonsmethod.html</a>
   <li><a href="./calculs2_numerical_integration.html">num_integration.html</a>
+  <li><a href="./num_integration.html">more numerical integration (Trapezoial rule, Simpson's rule)</a>
   <li><a href="./inverses.html">inverses.html</a>
   <li><a href="./logscale_plots.html">logscale_plots.html</a>
   <li><a href="./oct26examples.html">oct26examples.html</a>
