--- a/math250/week8.html
+++ b/math250/week8.html
@@ -44,6 +44,7 @@
       $$y'' - 4y' + 13 y = 0, \hspace{1cm} y(0) = 1, y'(0) = -4$$
     <li> What is the solution, \(x(t)\), to the IVP below?
         $$x'' + 2x' - 3x = 0, \hspace{1cm} x(0) = 6, x'(0) = -2$$
+    <li> What is the general solution to \(9x'' + 6x' + x = 0\)?
     </ol>
  </div>
 
