--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -27,6 +27,7 @@ $(function () {
   <li><a href="./calculus2_calc1review.html">calc1 review</a>
   <li><a href="./calculus2_integral_examples.html">integral examples</a>
   <li><a href="./calculus2_integral_patterns.html">integral_patterns</a>
+  <li><a href="./calculs2_sequences_and_series.html">sequences and series</a>
   <li><a href="./DEs_calc2.html">DEs_calc2.html</a>
   <li><a href="./dot_cross_product_examples.html">dot_cross_product_examples.html</a>
   <li><a href="./exam3review.html">exam3review.html</a>
