--- a/math154/DEs_calc2.html
+++ b/math154/DEs_calc2.html
@@ -20,8 +20,8 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-<body style="width: 1000px;">
-
+<body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
+  
 <h1>Intro to DEs</h1>
 
 <h2>SIR</h2>
@@ -138,5 +138,7 @@ Let \(x(t)\) be the amount of chemical \(C\) produced at time \(t\). Let \(a\) a
 
 </ol>
 </div>
+  
+  <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
