--- a/math250/week12.html
+++ b/math250/week12.html
@@ -126,7 +126,7 @@
       $$T_1' = -k_{1,A}(T_1 - A) - k_{1,2} (T_1 - T_2) $$
       $$T_2' = -k_{2,A}(T_2 - A) + k_{1,2} (T_1 - T_2) $$
     <li> Use the <a href="./pplane.jar">pplane</a> software to draw a phase plane for this system for various values of the parameters.
-      Assume \(k_{1,A} = k_{2,A}\). What value should be larger \(k_{1,A}\) or \(k_{1,2}\)? Why?
+       What value should be larger \(k_{1,A}\) or \(k_{1,2}\)? Why?
       Describe how solutions behave. Use common language.
     <li> Write the system in matrix-vector form. Label this system.
     <li> Find the eigenvalues and eigenvectors for the matrix above.
