--- a/other/quests/quest6/start.html
+++ b/other/quests/quest6/start.html
@@ -1,9 +1,36 @@
 <html>
-  <head>
-    
-  </head>
-  
-  <body>
-    start
-  </body>
+
+<head>
+<title>The Eleven Labours of Noracles</title>
+
+</head>
+
+<body>
+
+<h2>The Eleven Labours of Noracles!</h2>
+
+<P>Just as Hercules had his 12 labours in Greek Mythology, Nora has 11 tasks for her 11th birthday to rescue Dig'em Ups!
+<P>For each task you need to find a matching colored lock and key to rescue the Dig'em Ups.
+<P>You can complete the tasks in any order.<br>
+  <img src="./box.jpg"  width=500>
+<br><br>
+<!--<form method="get" action="n1.html">
+    <button type="submit">Start!</button>
+</form>
+-->
+<ul>
+  <li><a href="./task1.html">Task 1</a><br>
+  <li><a href="./task2.html">Task 2</a><br>
+  <li><a href="./task3.html">Task 3</a><br>
+  <li><a href="./task4.html">Task 4</a><br>
+  <li><a href="./task5.html">Task 5</a><br>
+  <li><a href="./task6.html">Task 6</a><br>
+  <li><a href="./task7.html">Task 7</a><br>
+  <li><a href="./task8.html">Task 8</a><br>
+  <li><a href="./task9.html">Task 9</a><br>
+  <li><a href="./task10.html">Task 10</a><br>
+  <li><a href="./task11.html">Task 11</a><br>
+</ul>
+
+</body>
 </html>
