--- a/other/quests/quest6/start.html
+++ b/other/quests/quest6/start.html
@@ -13,7 +13,7 @@
 <P>For each task you need to find a matching colored lock and key to rescue the Dig'em Ups.
 <P>You can complete the tasks in any order.<br>
   <img src="./box.jpg"  width=500>
-  <img src="./box2.png"  width=500>
+  <!--<img src="./box2.png"  width=500>-->
 <br><br>
 <!--<form method="get" action="n1.html">
     <button type="submit">Start!</button>
