--- a/other/quests/quest6/start.html
+++ b/other/quests/quest6/start.html
@@ -12,8 +12,8 @@
 <P>Just as Hercules had his 12 labours in Greek Mythology, Nora has 11 tasks for her 11th birthday to rescue Dig'em Ups!
 <P>For each task you need to find a matching colored lock and key to rescue the Dig'em Ups.
 <P>You can complete the tasks in any order.<br>
-  <img src="./box.jpg"  width=500>
-  <!--<img src="./box2.png"  width=500>-->
+  <!--<img src="./box.jpg"  width=500>-->
+  <img src="./box2.png"  width=500>
 <br><br>
 <!--<form method="get" action="n1.html">
     <button type="submit">Start!</button>
