--- a/other/quests/quest7/start.html
+++ b/other/quests/quest7/start.html
@@ -1,1 +1,33 @@
+<html>
 
+<head>
+<title>Nix Skorczewski and the Chest of Destiny</title>
+
+</head>
+
+<body style="width:600px; padding-left: 1cm; padding-bottom:10cm">
+
+<h2>Nix Skorczewski and the Chest of Destiny</h2>
+
+<P>Just as in the Goblet of Fire Harry Potter had to complete a challenge to rescue his friends,
+you have to complete a series of challenges to rescue your birthday present.
+<P>For each challenge below you will find a key that will be used to open a lock on the chest of destiny.
+<P>Once you've opened all the locks you can rescue your present.
+<P>Since you are turning 8 years old, there are 8 challenges that await you.
+<P>You can <i>mostly</i> complete the tasks in any order.<br>
+  <img src="./chest.jpg"  width=300>
+<br><br>
+
+<ul>
+  <li><a href="./task1.html">Challenge 1</a><br>
+  <li><a href="./task2.html">Challenge 2</a><br>
+  <li><a href="./task3.html">Challenge 3</a><br>
+  <li><a href="./task4.html">Challenge 4</a><br>
+  <li><a href="./task5.html">Challenge 5</a><br>
+  <li><a href="./task6.html">Challenge 6</a><br>
+  <li><a href="./task7.html">Challenge 7</a><br>
+  <li><a href="./task8.html">Challenge 8</a><br>
+</ul>
+
+</body>
+</html>
