--- a/other/quests/quest7/task8.html
+++ b/other/quests/quest7/task8.html
@@ -10,7 +10,7 @@
 
 <P>To find the orange key, first you need to find 10 orange eggs hidden in the basement.
 <P>Once you've found the eggs unscramble the letters to find the clue to the key.<br>
-<img src="./keyhoop.gif" height=400 ><br><br><br><br><br><br>
+<img src="./eggs.png" height=400 ><br><br><br><br><br><br>
 
 <br><br>
 <form method="get" action="start.html">
