--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -36,6 +36,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/gradient.html">gradients</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/MVoptimization.html">optimization</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/lagrange_multipliers.html">lagrange multipliers</a>
+    <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_linear_regression.html">Introduction to linear regression</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/double_integrals.html">double integrals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/polar_integrals.html">polar integrals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/triple_integrals.html">triple integrals</a>
