--- a/math154/calculus3_linear_regression.html
+++ b/math154/calculus3_linear_regression.html
@@ -274,14 +274,189 @@ Use one of these to verify your parameter calculations using the formulas above.
 <h2>Further examples</h2>
 <ol>
 <li>Find parameters \(a,b,c\) and \(d\) to fit the data below with a form \(z = a + bx + cy + dxy\).<br>
-  table
+  <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-za14{border-color:inherit;text-align:left;vertical-align:bottom}
+.tg .tg-7zrl{text-align:left;vertical-align:bottom}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-za14">x</th>
+    <th class="tg-7zrl">y</th>
+    <th class="tg-7zrl">z</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-za14">8.42</td>
+    <td class="tg-7zrl">0.83</td>
+    <td class="tg-7zrl">48.24</td>
+  </tr>
+  <tr>
+    <td class="tg-za14">1.77</td>
+    <td class="tg-7zrl">4.38</td>
+    <td class="tg-7zrl">48.77</td>
+  </tr>
+  <tr>
+    <td class="tg-za14">2.48</td>
+    <td class="tg-7zrl">1.39</td>
+    <td class="tg-7zrl">24.00</td>
+  </tr>
+  <tr>
+    <td class="tg-za14">5.39</td>
+    <td class="tg-7zrl">7.53</td>
+    <td class="tg-7zrl">196.78</td>
+  </tr>
+  <tr>
+    <td class="tg-za14">7.57</td>
+    <td class="tg-7zrl">7.80</td>
+    <td class="tg-7zrl">275.71</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">0.80</td>
+    <td class="tg-7zrl">8.36</td>
+    <td class="tg-7zrl">54.48</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">3.88</td>
+    <td class="tg-7zrl">7.42</td>
+    <td class="tg-7zrl">146.39</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">4.08</td>
+    <td class="tg-7zrl">6.54</td>
+    <td class="tg-7zrl">135.54</td>
+  </tr>
+</tbody>
+</table>
 <li>Find parameters \(a,b,c\) and \(d\) to fit the data below with a form \(z = a + bx^2 + cy^2 + dxy\).<br>
-    table
+  <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-za14{border-color:inherit;text-align:left;vertical-align:bottom}
+.tg .tg-7zrl{text-align:left;vertical-align:bottom}
+</style>
+<table class="tg">
+<thead>
+<tr>
+  <th class="tg-za14">x</th>
+  <th class="tg-7zrl">y</th>
+  <th class="tg-7zrl">z</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td class="tg-za14">3.34</td>
+  <td class="tg-7zrl">6.42</td>
+  <td class="tg-7zrl">465.31</td>
+</tr>
+<tr>
+  <td class="tg-za14">4.31</td>
+  <td class="tg-7zrl">8.65</td>
+  <td class="tg-7zrl">824.26</td>
+</tr>
+<tr>
+  <td class="tg-za14">4.32</td>
+  <td class="tg-7zrl">8.02</td>
+  <td class="tg-7zrl">739.87</td>
+</tr>
+<tr>
+  <td class="tg-za14">1.17</td>
+  <td class="tg-7zrl">7.40</td>
+  <td class="tg-7zrl">405.05</td>
+</tr>
+<tr>
+  <td class="tg-za14">3.88</td>
+  <td class="tg-7zrl">8.03</td>
+  <td class="tg-7zrl">698.75</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">1.04</td>
+  <td class="tg-7zrl">3.67</td>
+  <td class="tg-7zrl">118.06</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">2.24</td>
+  <td class="tg-7zrl">6.38</td>
+  <td class="tg-7zrl">380.68</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">8.49</td>
+  <td class="tg-7zrl">8.52</td>
+  <td class="tg-7zrl">1305.44</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">7.30</td>
+  <td class="tg-7zrl">2.14</td>
+  <td class="tg-7zrl">367.12</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">4.05</td>
+  <td class="tg-7zrl">4.30</td>
+  <td class="tg-7zrl">317.48</td>
+</tr>
+<tr>
+  <td class="tg-7zrl">7.28</td>
+  <td class="tg-7zrl">3.98</td>
+  <td class="tg-7zrl">541.14</td>
+</tr>
+</tbody>
+</table>
 <li>Consider the data below.
   <br>table<br>
   Which form can be fit using linear regression? Why?
   <ol type='a'><li>\(y = a\sin(2x) + b\sin(4x)\) or <li>\(y = \sin(ax) + \sin(bx)\)?</ol>
-    Fit the data with the appropriate form from above.
+    Fit the data below with the appropriate form from above.
+    <br>
+    <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-za14{border-color:inherit;text-align:left;vertical-align:bottom}
+.tg .tg-7zrl{text-align:left;vertical-align:bottom}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-za14">x</th>
+    <th class="tg-7zrl">18.61</th>
+    <th class="tg-7zrl">14.64</th>
+    <th class="tg-7zrl">42.25</th>
+    <th class="tg-7zrl">22.42</th>
+    <th class="tg-7zrl">82.87</th>
+    <th class="tg-7zrl">19.10</th>
+    <th class="tg-7zrl">93.03</th>
+    <th class="tg-7zrl">36.39</th>
+    <th class="tg-7zrl">84.60</th>
+    <th class="tg-7zrl">16.06</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-za14">y</td>
+    <td class="tg-7zrl">-3.87</td>
+    <td class="tg-7zrl">1.96</td>
+    <td class="tg-7zrl">-1.34</td>
+    <td class="tg-7zrl">5.57</td>
+    <td class="tg-7zrl">-2.29</td>
+    <td class="tg-7zrl">4.53</td>
+    <td class="tg-7zrl">3.05</td>
+    <td class="tg-7zrl">2.51</td>
+    <td class="tg-7zrl">-3.94</td>
+    <td class="tg-7zrl">5.73</td>
+  </tr>
+</tbody>
+</table>
 </ol>
 
 <br><br><br><br>
