--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -29,7 +29,9 @@
 <hr>
 
 <ul>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/dot_cross_product_intro.html">vectors</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_calculusreview.html">vectors</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_intro.html">vectors</a>
+    <li><a href="https://tyler-skorczewski-math.github.io/math154/dot_cross_product_examples.html">dot and cross product examples</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/3dplots.html">functions in multi dimensions</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/partial_derivatives.html">partial derivatives</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/tangent_planes.html">tangent planes</a>
