--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -32,6 +32,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_calculusreview.html">calculus review</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_intro.html">vectors</a>
     <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_examples.html">dot and cross product examples</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_lines_and_planes.html">lines and planes</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/3dplots.html">functions in multi dimensions</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/partial_derivatives.html">partial derivatives</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/tangent_planes.html">tangent planes</a>
