--- a/math154/calculus2_work_fluid_forces.html
+++ b/math154/calculus2_work_fluid_forces.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px; padding-left: 1cm" background="bg.jpg">
+  <body style="width: 600px; padding-left: 1cm" background="bg.jpg">
 
   <h1>Work & hydrostatic force examples</h1>
 
@@ -100,7 +100,7 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
 <div id="ex5" class="collapse">
   <!--<iframe width="1132" height="637" src="https://www.youtube.com/embed/M3FYfcHWnXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-  
+
   <iframe width="1280" height="720" src="https://www.youtube.com/embed/7klGsWiHY50" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <P>Set up integrals and calculate the work done for the three parts of the Heavy Metal challenge.
@@ -174,5 +174,6 @@ $(function () {
 <br>
 <br>
 <br>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
