--- a/math154/calculus3_dot_cross_product_intro.html
+++ b/math154/calculus3_dot_cross_product_intro.html
@@ -118,6 +118,6 @@ lengths of the two vectors. Justify your answer. <br>
 <br>
 <br>
 <br>
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
