--- a/math154/calculus3_lines_and_planes.html
+++ b/math154/calculus3_lines_and_planes.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 600px; padding-left: 1cm" background="bg.jpg">
+  <body style="width: 600px; padding-left: 1cm; padding-bottom: 5cm" background="bg.jpg">
 
   <h1>Lines and Planes</h1>
 
@@ -147,3 +147,8 @@ $(function () {
   is given by \( T(x) = 100e^{-2x^2} \). What is the temperature at the point (3,3,0)? (3,3,3)?
 
 </div>
+
+
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
+</body>
+</html>
