--- a/math154/calculus3_lines_and_planes.html
+++ b/math154/calculus3_lines_and_planes.html
@@ -126,7 +126,8 @@ $(function () {
 <h2>Example 7 - lines intersect, parallel, or skew? </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example</button>
 <div id="ex7" class="collapse">
-
+<P>Consider the two lines below. Do they intersect, are they parallel, or are they skew?
+  If they intersect, where? If they don't intersect, how far apart are they?
 
 </div>
 <br>
