--- a/math154/calculus3_lines_and_planes.html
+++ b/math154/calculus3_lines_and_planes.html
@@ -149,6 +149,12 @@ $(function () {
 
 </div>
 
+<h2>Example 9 - WW Test  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">WW Example</button>
+<div id="ex9" class="collapse">
+<iframe width="800" height="800" src="https://demo.webwork.rochester.edu/webwork2/html2xml?&answersSubmitted=0&sourceFilePath=Library/Rochester/setVectors4PlanesLines/ur_vc_2_8.pg&problemSeed=123567&courseID=daemon_course&userID=daemon&course_password=daemon&showSummary=1&displayMode=MathJax&problemIdentifierPrefix=102&language=en&outputformat=sticky"></iframe>
+
+</div>
 
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
