--- a/math154/calculus3_dot_cross_product_intro.html
+++ b/math154/calculus3_dot_cross_product_intro.html
@@ -63,13 +63,13 @@ lengths of the two vectors. Justify your answer. <br>
  </div>
 
 <h2>Example 1 - </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example </button>
   <div id="ex1" class="collapse">
     <P> Let \( \vec{a} = <3,4,5>\). Calculate \(\vec{a} \cdot \vec{a}\). How is this related to the length of \(\vec{a}\)?
 </div>
 
 <h2>Example 2 - Work </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example </button>
 <div id="ex2" class="collapse">
   <img src="./work_sled.png" width=300><br>
   Consider pulling a sled 5 meters along the ground horizontally. The force from the rope pulling the sled can be described with vector \(<4,3>\).
@@ -78,7 +78,7 @@ lengths of the two vectors. Justify your answer. <br>
 </div>
 
 <h2>Example 3 - projection</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example </button>
 <div id="ex3" class="collapse">
 <P> Let \(\vec{a} = <3,-4>\) and \(\vec{b}= <5,0>\).
 <ol>
@@ -105,12 +105,21 @@ lengths of the two vectors. Justify your answer. <br>
 </div>
 
 <h2>Example 5 - Torque </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example </button>
 <div id="ex5" class="collapse">
   <img src="./torque_wrench.png" width=300><br>
   Consider a 30 cm long wrench stretching horizontally from a nut.
   A force \(<0,3,-4>\) is applied to the end of the wrench opposite the nut.
   What is the torque applied?
+
+</div>
+
+<h2>Example 6 - Statics </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example </button>
+<div id="ex6" class="collapse">
+  <img src="./vec_statics_ex.png" width=400><br>
+  <P>Consider a 5kg mass hanging by two cables as shown in the figure above.
+    Find the tension in each cable.
 
 </div>
 <br>
