--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -45,7 +45,9 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/triple_integrals.html">triple integrals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/cylindrical_spherical_integrals.html">cylindrical and spherical integrals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/centers_of_mass_3d.html">centers of mass</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/vvf_158.html">vector valued functions</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf.html">vector valued functions</a>
+    <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_arclength_curvature.html">vvf - arc length and curvature</a>
+      <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_vvf_normals.html">vvf - normals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/vector_fields.html">vector fields</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/conservative_fields_greens_thm.html">conservative fields and Green's theorem</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/div_curl.html">divergence and curl</a>
