--- a/math154/calculus3_multivariablefunctions.html
+++ b/math154/calculus3_multivariablefunctions.html
@@ -34,7 +34,7 @@
   <div id="ex1" class="collapse">-->
     <P>In this lesson you will use sage and ideas about contours and traces to visualize functions of several variables.
 
-    <div class="compute"> 
+    <div class="compute">
     <script type="text/x-sage">
     # everything following hash symbol is comment
 var('x y')
@@ -125,8 +125,6 @@ show(cp)
 </ol>
 <br>
 <br>
-<br>
-<br>
-<br>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
