--- a/math154/calculus3_lines_and_planes.html
+++ b/math154/calculus3_lines_and_planes.html
@@ -143,7 +143,7 @@ $$L_3:  \vec{r}(t) =  \begin{bmatrix} 0\\0 \\0 \end{bmatrix} + w \begin{bmatrix}
 <P> The <a href="https://en.wikipedia.org/wiki/Rhombicuboctahedron">rhombicuboctahedron</a>,
   is an Archimedean solid with eight triangular and eighteen square faces.
   There are 24 identical vertices, with one triangle and three squares meeting at each one.
-  Consider such a shape that is 2 inches long, wide and tall centered at the origin.
+  Consider such a shape where each edge is 2 inches long centered at the origin.
   Then the \(x,y\), and \(z\) axes go through the middle the 3 red faces showing in the picture above.
   Also consider that this object is radiating heat so that the temperature a distance \(x\) from the object
   is given by \( T(x) = 100e^{-2x^2} \). What is the temperature at the point (3,3,0)? (3,3,3)?
