--- a/math154/calculus3_dot_cross_product_intro.html
+++ b/math154/calculus3_dot_cross_product_intro.html
@@ -27,21 +27,31 @@ $(function () {
 <hr>
 
 <h2>Introduction to Vectors</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vecs">Vector Questions</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vecs">Vector Questions 1</button>
   <div id="vecs" class="collapse">
     <P>
       <ol>
-      <li>Write down three examples of vector quantities? What do these have in common?<br>
-      <li>Draw a picture of \(\displaystyle \begin{bmatrix} 1 \\ 2 \end{bmatrix} = <1,2> = [1,2]^T = (1,2) \in \mathbb{R}^2\).<br>
-      <li>Draw a picture of \(\displaystyle \begin{bmatrix} 1 \\ 2 \\1\end{bmatrix} = <1,2,1> = [1,2,1]^T = (1,2,1) \in \mathbb{R}^3\). <br>
-      <li>True or False. \(\displaystyle \begin{bmatrix} 1/2 \\ 1/2 \end{bmatrix}\) is a unit vector. Justify your answer. <br>
-      <li><img src="./vecaddition.png" width=400><br>
-      <li><img src="./unitvec_mc1.png" width=600><br>
-      <li><img src="./unitvec_mc2.png" width=600><br>
-      <li>True or False. \(||\vec{v}|| =  |\vec{v_1}| + |\vec{v_2}| + |\vec{v_3}| \) where \(\vec{v} = v_1\vec{i} + v_2\vec{j} + v_3\vec{k} = v_1 \hat{x} + v_2 \hat{y} + v_3 \hat{z}\). Justify your answer. <br>
+      <li>Write down three examples of vector quantities? What do these have in common?<br><br><br>
+      <li>Draw a picture of \(\displaystyle \begin{bmatrix} 1 \\ 2 \end{bmatrix} = <1,2> = [1,2]^T = (1,2) \in \mathbb{R}^2\).<br><br><br>
+      <li>Draw a picture of \(\displaystyle \begin{bmatrix} 1 \\ 2 \\1\end{bmatrix} = <1,2,1> = [1,2,1]^T = (1,2,1) \in \mathbb{R}^3\). <br><br><br>
+      <li>True or False. \(\displaystyle \begin{bmatrix} 1/2 \\ 1/2 \end{bmatrix}\) is a unit vector. Justify your answer. <br><br><br>
+      </ol>
+    </div><br>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vecs2">Vector Questions 2</button>
+      <div id="vecs2" class="collapse">
+        <ol>
+      <li><img src="./vecaddition.png" width=400><br><br>
+      <li><img src="./unitvec_mc1.png" width=600><br><br>
+      <li><img src="./unitvec_mc2.png" width=600><br><br>
+      </ol>
+    </div><br>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vecs3">Vector Questions 3</button>
+      <div id="vecs3" class="collapse">
+        <ol>
+      <li>True or False. \(||\vec{v}|| =  |v_1| + |v_2| + |v_3| \) where \(\vec{v} = v_1\vec{i} + v_2\vec{j} + v_3\vec{k} = v_1 \hat{x} + v_2 \hat{y} + v_3 \hat{z}\). Justify your answer. <br><br><br>
       <li>True or False. The length of the sum of two vectors is always strictly larger than the sum of the
-lengths of the two vectors. Justify your answer. <br>
-      <li>What angle does the vector \( <3,1/2>\) make with the positve \(x\)-axis?
+lengths of the two vectors. Justify your answer. <br><br><br>
+      <li>What angle does the vector \( <3,1/2>\) make with the positve \(x\)-axis?<br><br>
 
       </ol>
  </div>
