--- a/math154/calculus3_dot_cross_product_examples.html
+++ b/math154/calculus3_dot_cross_product_examples.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE HTML>
 <html>
   <head>
     <script type="text/javascript" async
@@ -88,7 +88,11 @@ $(function () {
 <P> Methane, \(CH_4\), is a molecule with one carbon and four hydrogen atoms. Assume the hydrogen atoms are located at the corners of a regular tetrahedron with coordinates (0,0,0), (1,0,1), (0,1,1), and (1,1,0).
   The carbon atom is at the centroid of this tetrahedron at (1/2, 1/2, 1/2). The <i>bond angle</i> for the molecule is the angle between the line segments joining the carbon atom to two of the hydrogen atoms.
   Show this angle is approximately 109.5\(^\circ\).
-
+<br>
+<details>
+  <summary>Video</summary>
+  <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_yldkqoav&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_uw6bercj" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+</details>
 </div>
 <br>
 <br>
