--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -6,7 +6,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Calculus examples</title>
+    <title>MV Calculus examples</title>
     <script src="https://sagecell.sagemath.org/static/jquery.min.js"></script>
     <script src="https://sagecell.sagemath.org/embedded_sagecell.js"></script>
     <script>$(function () {
@@ -34,6 +34,7 @@
     <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_examples.html">dot and cross product examples</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_lines_and_planes.html">lines and planes</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_multivariablefunctions.html">functions in multi dimensions</a>
+<li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_multivariablelimits.html">limits of multivariable functions</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/partial_derivatives.html">partial derivatives</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/tangent_planes.html">tangent planes</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/gradient.html">gradients</a>
