--- a/math154/calculus3_chain_rule.html
+++ b/math154/calculus3_chain_rule.html
@@ -28,6 +28,17 @@
 
 <hr>
 
+<h2>Warmup </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">Warm up</button>
+  <div id="wu" class="collapse">
+
+    <ol type='A'>
+      <li>True or False. \(f = x+y+1\) solves Euler's equation \(xf_x + yf_y = f\).<br><br>
+      <li><img src="./tangentplane_graphs.png" width=800><br><br>
+    </ol>
+
+    </div>
+
 <h2>Example - Ski mountain </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4mtn">Example</button>
 <div id="ex4mtn" class="collapse">
