--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -31,12 +31,13 @@
 <ul>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_calculusreview.html">calculus review</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_intro.html">vectors</a>
-    <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_examples.html">dot and cross product examples</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_dot_cross_product_examples.html">dot and cross product examples</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_lines_and_planes.html">lines and planes</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_multivariablefunctions.html">functions in multi dimensions</a>
-<li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_multivariablelimits.html">limits of multivariable functions</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/partial_derivatives.html">partial derivatives</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/tangent_planes.html">tangent planes</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_multivariablelimits.html">limits of multivariable functions</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_partial_derivatives.html">partial derivatives</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_tangent_planes.html">tangent planes</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_chain_rule.html">chain rule</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/gradient.html">gradients</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/MVoptimization.html">optimization</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/lagrange_multipliers.html">lagrange multipliers</a>
