--- a/math154/calculus3_lines_and_planes.html
+++ b/math154/calculus3_lines_and_planes.html
@@ -128,8 +128,8 @@ $(function () {
 <div id="ex7" class="collapse">
 <P>Consider the two lines below. Do they intersect, are they parallel, or are they skew?
   If they intersect, where? If they don't intersect, how far apart are they?
-$$L_1:  \vec{r}_1(t) =  \begin{bmatrix} 1\\1 \\1 \end{bmatrix} + t \begin{bmatrix} 1\\2\\3\end{bmatrix}$$
-$$L_3:  \vec{r}_2(w) =  \begin{bmatrix} 0\\0 \\0 \end{bmatrix} + w \begin{bmatrix} 1\\3\\1\end{bmatrix}$$
+$$L_1:  \vec{r}(t) =  \begin{bmatrix} 1\\1 \\1 \end{bmatrix} + t \begin{bmatrix} 1\\2\\3\end{bmatrix}$$
+$$L_3:  \vec{r}(w) =  \begin{bmatrix} 0\\0 \\0 \end{bmatrix} + w \begin{bmatrix} 1\\3\\1\end{bmatrix}$$
 </div>
 <br>
 <br>
