--- a/math154/calculus3_chain_rule.html
+++ b/math154/calculus3_chain_rule.html
@@ -34,7 +34,7 @@
 
     <ol type='A'>
       <li>True or False. \(f = x+y+1\) solves Euler's equation \(xf_x + yf_y = f\).<br><br>
-      <li><img src="./tangentplane_graphs.png" width=800><br><br>
+      <li><img src="./tangentplane_graphs.png" width=650><br><br>
     </ol>
 
     </div>
@@ -69,6 +69,9 @@
       <ol>
         <li>Example. \(\displaystyle z = e^x \sin y\) with \(x = st^2, y=s^2t\). Find \(\frac{\partial z}{\partial s}\) and \(\frac{\partial z}{\partial t}\).
         </ol>
+
+        <br><br>
+        <img src="./mv_chainrule_tree_diagram.png" width=400><br>
 </div>
 
 <h2>Example - implicit partial derivatives </h2>
@@ -77,14 +80,14 @@
     <P>Consider \(\sin(xy) + \pi y^2 - x = 0\).
       <ol>
         <li>Use implicit differentiation to find \(\frac{dy}{dx}\).
-        <li>Now let \(F(x,y) = \sin(xy) + \pi y^2 - x = 0\) or simply \(F(x,y) = 0\). Implicitly differentiate with respect to \(x\) and solve for \(\frac{dy}{dx}\).
-        <li>Try the same thing but with \(G(x,y) = x^2 - 2y^2 - 1 = 0\) implicitly differentiate to find \(\frac{dy}{dx}\).
+        <li>Now let \(F(x,y) = \sin(xy) + \pi y^2 - x = 0\) or simply \(F(x,y) = 0\). Differentiate with respect to \(x\) and \(y\) (need partials now) and solve for \(\frac{dy}{dx}\).
+        <li>Try the same thing but with \(G(x,y) = x^2 - 2y^2 - 1 = 0\) to find \(\frac{dy}{dx}\).
         </ol>
         <br>
     <p> What if we have \(F(x,y,z) = 0\) instead? What changes?
       <ol>
-        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial x}{\partial x}\).
-        <li>Find \(\frac{\partial x}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
+        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial z}{\partial x}\).
+        <li>Find \(\frac{\partial z}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
         </ol>
 
 </div>
