--- a/math154/calculus3_chain_rule.html
+++ b/math154/calculus3_chain_rule.html
@@ -86,7 +86,7 @@
         <br>
     <p> What if we have \(F(x,y,z) = 0\) instead? What changes?
       <ol>
-        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial z}{\partial x}\).
+        <!--<li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial z}{\partial x}\).-->
         <li>Find \(\frac{\partial z}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
         </ol>
 
