--- a/math154/calc3home.html
+++ b/math154/calc3home.html
@@ -38,9 +38,9 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_partial_derivatives.html">partial derivatives</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_tangent_planes.html">tangent planes</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_chain_rule.html">chain rule</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/gradient.html">gradients</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/MVoptimization.html">optimization</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/lagrange_multipliers.html">lagrange multipliers</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_gradient.html">gradients</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_MVoptimization.html">MV optimization</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_lagrange_multipliers.html">lagrange multipliers</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus3_linear_regression.html">Introduction to linear regression</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/double_integrals.html">double integrals</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/polar_integrals.html">polar integrals</a>
