--- a/math154/calculus3_MVoptimization.html
+++ b/math154/calculus3_MVoptimization.html
@@ -116,7 +116,7 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
 
 <h3>Contour plots</h3>
 
-<div class="compute">
+<div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
 
@@ -142,7 +142,7 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 
 <h3>Contour plots with a constraint</h3>
 
-<div class="compute">
+<div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
 
