--- a/math154/calculus3_gradient.html
+++ b/math154/calculus3_gradient.html
@@ -138,7 +138,7 @@
 
 <h3>Contour plots</h3>
 
-<div class="compute">
+<div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
 
