--- a/math154/calculus3_lagrange_multipliers.html
+++ b/math154/calculus3_lagrange_multipliers.html
@@ -30,7 +30,7 @@
 
 <h3>Contour plots</h3>
 
-<div class="compute">
+<div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
 
@@ -56,7 +56,7 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 
 <h3>Contour plots with a constraint</h3>
 
-<div class="compute">
+<div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
 
