--- a/math154/calculus3_lagrange_multipliers.html
+++ b/math154/calculus3_lagrange_multipliers.html
@@ -132,6 +132,6 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 <br>
 <br>
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
