--- a/math154/calculus3_MVoptimization.html
+++ b/math154/calculus3_MVoptimization.html
@@ -101,7 +101,7 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
 <h2>Global Max/Mins </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exigl">Example </button>
 <div id="exigl" class="collapse">
-  <P>Find the global maximum and minimum of th function \(f(x,y) = x^2 + y^2 + x^2 y + 4\) on the set \(S = \left\{ (x,y) | |x| \le 1, |y| \le 1 \right\} \).
+  <P>Find the global maximum and minimum of the function \(f(x,y) = x^2 + y^2 + x^2 y + 4\) on the set \(S = \left\{ (x,y) | |x| \le 1, |y| \le 1 \right\} \).
 </div>
 
 <h2>Blood Types </h2>
@@ -167,6 +167,21 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 </script>
 </div>
 
+<h2>Building design </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
+<div id="ex4" class="collapse">
+<P>A rectangular building is being designed to minimize heat loss.
+  The east and west walls lose heat at a rate of 10 units/m\(^2\) per day,
+  the north and south walls at a rate of 8 units/m\(^2\) per day,
+  the floor at a rate of 1 unit/m\(^2\) per day,
+  and the roof at a rate of 5 units/m\(^2\) per day.
+  Each wall must be at least 30 m long, the height must be at least 4 m,
+  and the volume must be exactly 4000 m\(^3\).
+ <ol>
+   <li>Derive a function that describes the heat loss of the building. What is the domain of this function?
+   <li>Find the dimensions that minimize heat loss. (Check both the critical points and the points on the boundary of the domain.)
+   <li>Could you design a building with even less heat loss if the restrictions on the lengths of the walls were removed?
+   </ol>
 <br>
 <br>
 <br>
@@ -177,6 +192,6 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 <br>
 <br>
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
