--- a/math154/calculus3_gradient.html
+++ b/math154/calculus3_gradient.html
@@ -75,7 +75,7 @@
 <h2>Temperature </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exigl">Example </button>
 <div id="exigl" class="collapse">
-  <P>Let the temperature at a point in space be given by \(\displaystyle T(x,y,z) = 200e^{-x^2 - 3y^2-9^2}\).
+  <P>Let the temperature at a point in space be given by \(\displaystyle T(x,y,z) = 200e^{-x^2 - 3y^2-9z^2}\).
     What is the rate of change of temperature at point \(P_1(2,-1,2)\) in the direction toward point \(P_2(3,-3,3)\)?
 </div>
 
@@ -180,6 +180,6 @@ ptype = selector(['jet','hsv','rainbow','Greys','GnBu', 'PuBu', 'YlGnBu'],button
 <br>
 <br>
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
